--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <title>Sorenzo GV</title>
   </head>
   <body>
-    <div class="site-container">
+    <h1 class="nom">Sorenzo</h1>
+    <h3 class="gr">GRAMAGLIA</h3>
+    <h3 class="vi">VIGNAUX</h3>
+    <div class="sidebar">
       <div class="card">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 261.76 226.69"><path d="M161.096.001l-30.225 52.351L100.647.001H-.005l130.877 226.688L261.749.001z" fill="#41b883"/><path d="M161.096.001l-30.225 52.351L100.647.001H52.346l78.526 136.01L209.398.001z" fill="#34495e"/></svg>
         <h3>Vue.js</h3>
@@ -27,10 +30,9 @@
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 261.76 226.69"><path d="M161.096.001l-30.225 52.351L100.647.001H-.005l130.877 226.688L261.749.001z" fill="#41b883"/><path d="M161.096.001l-30.225 52.351L100.647.001H52.346l78.526 136.01L209.398.001z" fill="#34495e"/></svg>
         <h3>Vue.js</h3>
       </div>
-      <div class="holder">
-        
-      </div>
+    
     </div>
+    <div class="holder"></div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
