--- a/index.html
+++ b/index.html
@@ -10,29 +10,14 @@
     <title>Sorenzo GV</title>
   </head>
   <body>
-    <h1 class="nom">Sorenzo</h1>
-    <h3 class="gr">GRAMAGLIA</h3>
-    <h3 class="vi">VIGNAUX</h3>
-    <div class="sidebar">
-      <div class="card">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 261.76 226.69"><path d="M161.096.001l-30.225 52.351L100.647.001H-.005l130.877 226.688L261.749.001z" fill="#41b883"/><path d="M161.096.001l-30.225 52.351L100.647.001H52.346l78.526 136.01L209.398.001z" fill="#34495e"/></svg>
-        <h3>Vue.js</h3>
+    <div class="blue">
+      <h1>:(</h1>
+      <p>Ce site internet n'est pas encore disponible. C'est vraiment dommage ...</p>
+      <p>42% achevés</p>
+      <div class="qr">
+        <img src="https://api.qrserver.com/v1/create-qr-code/?data=https://youtu.be/dQw4w9WgXcQ&amp;size=100x100" alt="Dance !"/>
       </div>
-      <div class="card">
-        <img src="./img/flutter.png" alt="Flutter">
-        <h3>Flutter</h3>
-      </div>
-      <div class="card">
-        <img src="./img/js.png" alt="JavaScript">
-        <h3>JavaScript</h3>
-      </div>
-      <div class="card">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 261.76 226.69"><path d="M161.096.001l-30.225 52.351L100.647.001H-.005l130.877 226.688L261.749.001z" fill="#41b883"/><path d="M161.096.001l-30.225 52.351L100.647.001H52.346l78.526 136.01L209.398.001z" fill="#34495e"/></svg>
-        <h3>Vue.js</h3>
-      </div>
-    
     </div>
-    <div class="holder"></div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
